@@ -109,7 +109,6 @@ namespace gameswf
 		void	set_background_color(const rgba& color);
 		void	set_background_alpha(float alpha);
 		float	get_background_alpha() const;
-		void	restart();
 		void	advance(float delta_time);
 
 		void	goto_frame(int target_frame_number);
