@@ -378,19 +378,6 @@ namespace gameswf
 			m_goto_frame_action_list.clear();
 		}
 
-		// start stream sound
-		sound_handler* sound = get_sound_handler();
-		if (sound)
-		{
-			if (m_def->m_ss_start == m_current_frame)
-			{
-				if (m_def->m_ss_id >= 0)
-				{
-					sound->play_sound(m_def->m_ss_id, 0);
-				}
-			}
-		}
-
 		// Update current and next frames. 
 		if (m_play_state == PLAY) 
 		{ 
@@ -492,6 +479,20 @@ namespace gameswf
 				e->execute(this);
 			}
 		}
+
+		// start stream sound
+		sound_handler* sound = get_sound_handler();
+		if (sound)
+		{
+			if (m_def->m_ss_start == m_current_frame)
+			{
+				if (m_def->m_ss_id >= 0)
+				{
+					sound->play_sound(m_def->m_ss_id, 0);
+				}
+			}
+		}
+
 	}
 
 	void	sprite_instance::execute_frame_tags_reverse(int frame)
